Fix nav z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,7 @@ a:hover {
     padding-top: 1em;
     padding-right: 1.5em;
     background: #0e07047e;
+    z-index: 1;
 }
 
 li {
